--- a/tutorials/l_master.ipynb
+++ b/tutorials/l_master.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "0e9fbfdc",
+   "id": "d29e60ca",
    "metadata": {},
    "source": [
     "# Custom Time Evolution\n",
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a8c4a80d",
+   "id": "a7ae1245",
    "metadata": {},
    "source": [
     "*Note*: Please consult the tutorial on potentials first."
@@ -20,7 +20,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "4aa4f22c",
+   "id": "cdb548de",
    "metadata": {},
    "source": [
     "*Note*: While a bit more complicated, this tutorial can help you make your simulations not only more versatile, but also increase their efficiency."
@@ -28,7 +28,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "5b7ebc12",
+   "id": "c20b5a71",
    "metadata": {},
    "source": [
     "## Hamiltonian"
@@ -36,7 +36,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c3ae877c",
+   "id": "dd4c8a4b",
    "metadata": {},
    "source": [
     "When calling the integration for the master equation, you can give an optional argument, `hamiltonian`. As already discussed, this argument represents a Hamiltonian as a dictionary of functions."
@@ -44,7 +44,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "841aa456",
+   "id": "eec95195",
    "metadata": {},
    "source": [
     "Up to now, we  wanted to use custom potentials, so we  added them to the dictionary. Let's look more closely at what is going on by considering a flake under plane wave illumination."
@@ -53,13 +53,13 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "ccad0c32",
+   "id": "4fcc934b",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-02-03T14:55:44.443567Z",
-     "iopub.status.busy": "2025-02-03T14:55:44.443398Z",
-     "iopub.status.idle": "2025-02-03T14:55:47.477525Z",
-     "shell.execute_reply": "2025-02-03T14:55:47.477005Z"
+     "iopub.execute_input": "2025-02-03T15:20:23.214587Z",
+     "iopub.status.busy": "2025-02-03T15:20:23.214405Z",
+     "iopub.status.idle": "2025-02-03T15:20:26.357677Z",
+     "shell.execute_reply": "2025-02-03T15:20:26.357042Z"
     }
    },
    "outputs": [
@@ -81,7 +81,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a09e3604",
+   "id": "145f46b2",
    "metadata": {},
    "source": [
     "As discussed, the default Hamiltonian  has three terms:"
@@ -89,7 +89,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "28efada8",
+   "id": "8a933594",
    "metadata": {},
    "source": [
     "1. a bare Hamiltonian.\n",
@@ -99,7 +99,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "df6fda6b",
+   "id": "ff90f443",
    "metadata": {},
    "source": [
     "Each of these terms is represented by a function. Every function accepts the following three arguments:"
@@ -107,7 +107,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b432992b",
+   "id": "162d71a4",
    "metadata": {},
    "source": [
     "1. time\n",
@@ -117,7 +117,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "68df9cfa",
+   "id": "dd99440a",
    "metadata": {},
    "source": [
     "Every function maps these arguments to a complex matrix. Before running a simulation, the functions in the dictionary get turned into a list `func_list`. "
@@ -125,7 +125,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "4d6e76da",
+   "id": "bea21dd2",
    "metadata": {},
    "source": [
     "The matrix representation of the Hamiltonian is then given by applying and adding these functions, like so `H[time] = sum( f(times[time], density_matrix[time], args) for f in func_list )`."
@@ -133,7 +133,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c8e017b7",
+   "id": "ba9b4211",
    "metadata": {},
    "source": [
     "## Argument Objects"
@@ -141,7 +141,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c8f234fa",
+   "id": "84d33d15",
    "metadata": {},
    "source": [
     "The `args` object is a named tuple (like a struct in the C programming language) and we can inspect its contents by looking at its fields "
@@ -150,13 +150,13 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "5f911a30",
+   "id": "acf20f0e",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-02-03T14:55:47.479911Z",
-     "iopub.status.busy": "2025-02-03T14:55:47.479428Z",
-     "iopub.status.idle": "2025-02-03T14:55:49.408710Z",
-     "shell.execute_reply": "2025-02-03T14:55:49.408184Z"
+     "iopub.execute_input": "2025-02-03T15:20:26.360166Z",
+     "iopub.status.busy": "2025-02-03T15:20:26.359656Z",
+     "iopub.status.idle": "2025-02-03T15:20:28.384725Z",
+     "shell.execute_reply": "2025-02-03T15:20:28.384097Z"
     }
    },
    "outputs": [
@@ -175,7 +175,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a97e6869",
+   "id": "3d02d969",
    "metadata": {},
    "source": [
     "We can access individual entries"
@@ -184,13 +184,13 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "8df7ad15",
+   "id": "15785039",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-02-03T14:55:49.410810Z",
-     "iopub.status.busy": "2025-02-03T14:55:49.410400Z",
-     "iopub.status.idle": "2025-02-03T14:55:49.414027Z",
-     "shell.execute_reply": "2025-02-03T14:55:49.413431Z"
+     "iopub.execute_input": "2025-02-03T15:20:28.386904Z",
+     "iopub.status.busy": "2025-02-03T15:20:28.386430Z",
+     "iopub.status.idle": "2025-02-03T15:20:28.390168Z",
+     "shell.execute_reply": "2025-02-03T15:20:28.389624Z"
     }
    },
    "outputs": [
@@ -208,7 +208,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "11ecff00",
+   "id": "b4a8891f",
    "metadata": {},
    "source": [
     "The `args` object is a lower-level representation of the OrbitalList object: a collection of numbers and arrays that represent the structure."
@@ -216,7 +216,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "5fe366dc",
+   "id": "5fd4d812",
    "metadata": {},
    "source": [
     "The evolution is determined by the Hamiltonian. It is given by an addition of functions. Each of these functions depends on time, the density matrix and the simulated structure. So, a single function representing a term in the Hamiltonian has the following signature `term: time, density_matrix, args -> matrix`."
@@ -224,7 +224,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "97804bbf",
+   "id": "00e1f9ba",
    "metadata": {},
    "source": [
     "## Computing Terms"
@@ -232,7 +232,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "58b7fc8b",
+   "id": "fbd880b1",
    "metadata": {},
    "source": [
     "Individual terms of the default Hamiltonian can be inspected and since these are functions, applied to arguments. First, consider the bare Hamiltonian"
@@ -241,13 +241,13 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "cffa3fc9",
+   "id": "93494353",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-02-03T14:55:49.416068Z",
-     "iopub.status.busy": "2025-02-03T14:55:49.415715Z",
-     "iopub.status.idle": "2025-02-03T14:55:49.460380Z",
-     "shell.execute_reply": "2025-02-03T14:55:49.459876Z"
+     "iopub.execute_input": "2025-02-03T15:20:28.392050Z",
+     "iopub.status.busy": "2025-02-03T15:20:28.391707Z",
+     "iopub.status.idle": "2025-02-03T15:20:28.438117Z",
+     "shell.execute_reply": "2025-02-03T15:20:28.437619Z"
     }
    },
    "outputs": [
@@ -271,7 +271,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ca3fe8f3",
+   "id": "7f535c9b",
    "metadata": {},
    "source": [
     "The function returns the bare Hamiltonian, independent of the time and density matrix. Let's compute the Coulomb potential at the initial time"
@@ -280,13 +280,13 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "108b0e35",
+   "id": "f02ba9fe",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-02-03T14:55:49.462331Z",
-     "iopub.status.busy": "2025-02-03T14:55:49.461959Z",
-     "iopub.status.idle": "2025-02-03T14:55:49.529508Z",
-     "shell.execute_reply": "2025-02-03T14:55:49.528976Z"
+     "iopub.execute_input": "2025-02-03T15:20:28.440091Z",
+     "iopub.status.busy": "2025-02-03T15:20:28.439732Z",
+     "iopub.status.idle": "2025-02-03T15:20:28.513531Z",
+     "shell.execute_reply": "2025-02-03T15:20:28.512928Z"
     }
    },
    "outputs": [
@@ -309,7 +309,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "cbddd8f0",
+   "id": "89a7c0fb",
    "metadata": {},
    "source": [
     "At the start of the simulation, there is no induced Coulomb potential (all entries in the matrix are zero), because the system is in its ground state."
@@ -317,7 +317,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "5c4278af",
+   "id": "bd8b9890",
    "metadata": {},
    "source": [
     "Last, there is the external potential. Since no transition dipole moments are considered, it will be entirely diagonal in site basis"
@@ -326,13 +326,13 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "990cc386",
+   "id": "e30c762c",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-02-03T14:55:49.531585Z",
-     "iopub.status.busy": "2025-02-03T14:55:49.531199Z",
-     "iopub.status.idle": "2025-02-03T14:55:49.558995Z",
-     "shell.execute_reply": "2025-02-03T14:55:49.558475Z"
+     "iopub.execute_input": "2025-02-03T15:20:28.515679Z",
+     "iopub.status.busy": "2025-02-03T15:20:28.515316Z",
+     "iopub.status.idle": "2025-02-03T15:20:28.546150Z",
+     "shell.execute_reply": "2025-02-03T15:20:28.545582Z"
     }
    },
    "outputs": [
@@ -355,7 +355,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "7360da94",
+   "id": "a29b384a",
    "metadata": {},
    "source": [
     "## Modelling Terms"
@@ -363,7 +363,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "57846eb5",
+   "id": "ca92d2b7",
    "metadata": {},
    "source": [
     "To include arbitrary terms in the time evolution, we define a function that"
@@ -371,7 +371,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "beb85ec7",
+   "id": "c1817ac6",
    "metadata": {},
    "source": [
     "1. Accepts `time, density_matrix, args`\n",
@@ -381,7 +381,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "7e7b2d88",
+   "id": "38cbf9ef",
    "metadata": {},
    "source": [
     "Then, we insert it in the dictionary, potentially overwriting a default key."
@@ -389,7 +389,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e491e6ff",
+   "id": "cfae526a",
    "metadata": {},
    "source": [
     "Let's illustrate this at the example of a custom scalar potential. We want to replace the dipole-gauge coupling $\\vec{E} \\vec{P}$ with a scalar potential representing a plane-wave pulse. Let's define this potential first"
@@ -398,13 +398,13 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "1588c878",
+   "id": "2a76d783",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-02-03T14:55:49.560992Z",
-     "iopub.status.busy": "2025-02-03T14:55:49.560799Z",
-     "iopub.status.idle": "2025-02-03T14:55:49.564896Z",
-     "shell.execute_reply": "2025-02-03T14:55:49.564301Z"
+     "iopub.execute_input": "2025-02-03T15:20:28.548241Z",
+     "iopub.status.busy": "2025-02-03T15:20:28.548038Z",
+     "iopub.status.idle": "2025-02-03T15:20:28.552323Z",
+     "shell.execute_reply": "2025-02-03T15:20:28.551728Z"
     },
     "lines_to_end_of_cell_marker": 0,
     "lines_to_next_cell": 1
@@ -423,7 +423,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "dfe44946",
+   "id": "e89fbbd8",
    "metadata": {},
    "source": [
     "Now, we replace the default potential with our custom term,  as we did before in the case of the pulsed dipole."
@@ -432,13 +432,13 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "c8020953",
+   "id": "753d3e7b",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-02-03T14:55:49.566517Z",
-     "iopub.status.busy": "2025-02-03T14:55:49.566342Z",
-     "iopub.status.idle": "2025-02-03T14:55:49.569191Z",
-     "shell.execute_reply": "2025-02-03T14:55:49.568705Z"
+     "iopub.execute_input": "2025-02-03T15:20:28.554072Z",
+     "iopub.status.busy": "2025-02-03T15:20:28.553894Z",
+     "iopub.status.idle": "2025-02-03T15:20:28.557322Z",
+     "shell.execute_reply": "2025-02-03T15:20:28.556710Z"
     }
    },
    "outputs": [],
@@ -448,7 +448,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "dc9fc8b9",
+   "id": "4862cd55",
    "metadata": {},
    "source": [
     "To run a time-domain simulation, we  pass the modified Hamiltonian dictionary directly, as demonstrated in the first section"
@@ -457,13 +457,13 @@
   {
    "cell_type": "code",
    "execution_count": 9,
-   "id": "42b104f0",
+   "id": "0c3c1c58",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-02-03T14:55:49.570864Z",
-     "iopub.status.busy": "2025-02-03T14:55:49.570672Z",
-     "iopub.status.idle": "2025-02-03T14:55:52.147201Z",
-     "shell.execute_reply": "2025-02-03T14:55:52.146711Z"
+     "iopub.execute_input": "2025-02-03T15:20:28.559098Z",
+     "iopub.status.busy": "2025-02-03T15:20:28.558758Z",
+     "iopub.status.idle": "2025-02-03T15:20:31.216784Z",
+     "shell.execute_reply": "2025-02-03T15:20:31.216245Z"
     }
    },
    "outputs": [
@@ -507,7 +507,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d5d58922",
+   "id": "fd3bff69",
    "metadata": {},
    "source": [
     "## Modelling Dissipators"
@@ -515,7 +515,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "fb039adf",
+   "id": "6d2174ed",
    "metadata": {},
    "source": [
     "Dissipators are modelled as functions with the same signature as terms in the Hamiltonian, i.e. to model a custom dissipator"
@@ -523,7 +523,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c4a7c15f",
+   "id": "c8a0c440",
    "metadata": {},
    "source": [
     "1. Define a function `diss : time, density_matrix, args -> jax.Array`\n",
@@ -533,7 +533,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "75f7c423",
+   "id": "aba3900d",
    "metadata": {},
    "source": [
     "You can also get defaults"
@@ -542,13 +542,13 @@
   {
    "cell_type": "code",
    "execution_count": 10,
-   "id": "936736f2",
+   "id": "644fd4f2",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-02-03T14:55:52.149489Z",
-     "iopub.status.busy": "2025-02-03T14:55:52.149099Z",
-     "iopub.status.idle": "2025-02-03T14:55:52.152841Z",
-     "shell.execute_reply": "2025-02-03T14:55:52.152148Z"
+     "iopub.execute_input": "2025-02-03T15:20:31.219013Z",
+     "iopub.status.busy": "2025-02-03T15:20:31.218629Z",
+     "iopub.status.idle": "2025-02-03T15:20:31.222522Z",
+     "shell.execute_reply": "2025-02-03T15:20:31.221875Z"
     },
     "lines_to_end_of_cell_marker": 0,
     "lines_to_next_cell": 1
@@ -558,7 +558,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "{'decoherence_time': <function DecoherenceTime.<locals>.<lambda> at 0x7fe3f89d3e20>}\n"
+      "{'decoherence_time': <function DecoherenceTime.<locals>.<lambda> at 0x7fb053fe3e20>}\n"
      ]
     }
    ],
@@ -569,7 +569,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ba3125c0",
+   "id": "7a211ec3",
    "metadata": {},
    "source": [
     "NOTE: To pass the dissipator above to the `master_equation` method, you have to specify the relaxation rate again. "
@@ -577,7 +577,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "473d4d75",
+   "id": "43db87ba",
    "metadata": {},
    "source": [
     "## Postprocessing"
@@ -585,7 +585,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "162c0491",
+   "id": "ff678ffa",
    "metadata": {},
    "source": [
     "You can define custom postprocessing. These are functions with the signature `postprocess : density_matrix_batch, args -> array`. The `density_matrix_batch` is an array of shape `TxNxN`, where `T` encodes time."
@@ -593,7 +593,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "1307fc9d",
+   "id": "7ad35f50",
    "metadata": {},
    "source": [
     "For example, if you are only interested in the occupation of the 0-th state"
@@ -602,13 +602,13 @@
   {
    "cell_type": "code",
    "execution_count": 11,
-   "id": "18939702",
+   "id": "63e71e31",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-02-03T14:55:52.154843Z",
-     "iopub.status.busy": "2025-02-03T14:55:52.154481Z",
-     "iopub.status.idle": "2025-02-03T14:55:52.157480Z",
-     "shell.execute_reply": "2025-02-03T14:55:52.156909Z"
+     "iopub.execute_input": "2025-02-03T15:20:31.224527Z",
+     "iopub.status.busy": "2025-02-03T15:20:31.224204Z",
+     "iopub.status.idle": "2025-02-03T15:20:31.227279Z",
+     "shell.execute_reply": "2025-02-03T15:20:31.226725Z"
     },
     "lines_to_end_of_cell_marker": 0,
     "lines_to_next_cell": 1
@@ -622,13 +622,13 @@
   {
    "cell_type": "code",
    "execution_count": 12,
-   "id": "15ec1660",
+   "id": "d51cb6cc",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-02-03T14:55:52.159348Z",
-     "iopub.status.busy": "2025-02-03T14:55:52.159010Z",
-     "iopub.status.idle": "2025-02-03T14:55:53.216909Z",
-     "shell.execute_reply": "2025-02-03T14:55:53.216319Z"
+     "iopub.execute_input": "2025-02-03T15:20:31.228961Z",
+     "iopub.status.busy": "2025-02-03T15:20:31.228788Z",
+     "iopub.status.idle": "2025-02-03T15:20:32.306105Z",
+     "shell.execute_reply": "2025-02-03T15:20:32.305547Z"
     }
    },
    "outputs": [
